# python-pytest

./: Makefile  README.md  pyproject.toml  pytest.ini  results.html  results.xml  setup.py  tox.ini
tests/cross-browser/: conftest.py  test_crossbrowser.py
tests/data-driven/: conftest.py  test_data_driven.py
tests/parallel/: test_chemstry_results.py
tests/parametrize/: test_television.py
tests/sportscar/: conftest.py
tests/sportscar/body/: test_body.py
tests/sportscar/engine/: test_engine.py
tests/sportscar/entertainment/: test_entertainment.py
tests/white-box/: test_titlecase.py
