[tool.poetry]
name = "python-pytest"
version = "0.1.0"
description = ""
authors = ["Bruno"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
pytest-html = "^3.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
