[tool.poetry]
name = "python-pytest"
version = "1.0.0"
description = ""
authors = ["Bruno"]

packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^6.2.5"
selenium = "^4.1.0"
webdriver-manager = "^3.5.2"
pytest-html = "^3.1.1"
pytest-xdist = "^2.5.0"
tox = "^3.24.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
